--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="libs/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<link href="libs/bootstrap.min.css" rel="stylesheet">
-	</head
+	</head>
 	<body>
 	
 		<div class="title-panel">
